# lake

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
configs/: retention.yaml  sources.yaml
dashboard/: app.py
deploy/nas-mount/: mnt-nas.automount  mnt-nas.mount  smb-credentials.example
deploy/systemd/: lake-alert@.service  lake-api.service  lake-backup.service  lake-backup.timer  lake-daily.timer  lake-dashboard.service  lake-dispatch@.service  lake-freshness.service  lake-freshness.timer  lake-monthly.timer  lake-retry.service  lake-retry.timer  lake-scrape@.service  lake-serve-build.service  lake-serve-build.timer  lake-sweep.service  lake-sweep.timer  lake-weekly.timer  lake-yearly.timer
docs/: admin.md  api.md  architecture.md  deployment.md  roadmap.md  runbook.md
docs/sources/: bps_inflation.md  census_full.md  gov_news.md  seki.md  worldbank_gdp.md
migrations/: env.py
migrations/versions/: 0001_initial_catalog.py  0002_admin_panel.py
notebooks/: README.md
scripts/: backup_metadata.sh  bootstrap_nuc.sh  restore_metadata.sh
src/lake/: __init__.py  cli.py  registry.py  settings.py
src/lake/api/: __init__.py  app.py  catalog.py  engine.py  export.py  ids.py  middleware.py  ratelimit.py  rows.py  schemas.py  sql_guard.py
src/lake/core/: __init__.py  base_scraper.py  exceptions.py  logging.py  models.py  retry.py  sniff.py  storage.py  validate.py
src/lake/metadata/: __init__.py  models.py  repo.py  session.py
src/lake/ops/: __init__.py  alerts.py  retention.py  sweeper.py
src/lake/sources/: __init__.py
src/lake/transform/: __init__.py  quality.py  runner.py
tests/: conftest.py
tests/fixtures/: gov_news_index.html  seki_TABEL9_7_monthly.xls  seki_index.html  worldbank_gdp_page1.json
tests/integration/: test_admin_auth.py  test_admin_routes.py  test_end_to_end.py  test_metadata_repo.py
tests/unit/: test_base_scraper.py  test_census_parser.py  test_parsers.py  test_quality.py  test_registry.py  test_schemas.py  test_seki_parser.py  test_seki_scraper.py  test_seki_transform.py  test_storage.py  test_validate.py
tests/unit/api/: conftest.py  test_ai_tools.py  test_browse.py  test_config_editor.py  test_drilldown.py  test_export.py  test_ratelimit.py  test_routes.py  test_series.py  test_sql_guard.py  test_ui.py  test_ui_json.py
web/: .env.example  README.md  components.json  package.json  tsconfig.json
web/src/: routeTree.gen.ts  styles.css
web/src/components/: admin-bits.tsx  admin-sidebar.tsx  blocks.tsx  chart.tsx  count-up.tsx  shell.tsx  (+4 more)
(+80 files in other folders)
