[project]
name = "lake"
version = "0.1.0"
description = "Lightweight production data lake: scrapers -> NAS -> Postgres catalog -> Parquet"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27",
    "tenacity>=8.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "typer>=0.12",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "selectolax>=0.3.21",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Phase 3+: transform layer. Not needed to run scrapers.
transform = [
    "duckdb>=1.0",
    "polars>=1.0",
    "pyarrow>=16.0",
    "openpyxl>=3.1",
    # Bank Indonesia publishes SEKI as legacy BIFF .xls, which openpyxl cannot
    # read. xlrd 2.x dropped xlsx support and reads exactly this format.
    "xlrd>=2.0",
    "pandera>=0.20",
]
# Phase 4: dashboard. Not needed to run scrapers.
dashboard = [
    "streamlit>=1.36",
    "pandas>=2.2",
]
# Read-only serving API, exports, AI exploration, and the admin panel.
api = [
    "duckdb>=1.5",
    "pyarrow>=16.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1",
    # Admin auth. Argon2id is the current password-hashing recommendation (OWASP,
    # and the PHC winner); it is memory-hard, so a stolen hash does not fall to a
    # GPU the way PBKDF2 and bcrypt increasingly do.
    "argon2-cffi>=23.1",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "respx>=0.21",
    "types-PyYAML",
]

[project.scripts]
lake = "lake.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lake"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "B008",   # typer expresses defaults as function calls
    "UP042",  # `str, Enum` is deliberate: SQLAlchemy maps the .value to the PG enum
]

[tool.ruff.format]
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
packages = ["lake"]
mypy_path = "src"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: needs a real database or filesystem",
]
